--- a/_data/ff146/manifest.json
+++ b/_data/ff146/manifest.json
@@ -33,6 +33,12 @@
           ,
           {
             "type": "AnnotationPage",
+            "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff146/canvas-1/canvas/speaker.json",
+            "label": "Speaker"
+          }
+          ,
+          {
+            "type": "AnnotationPage",
             "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff146/canvas-1/canvas/transcription--poem.json",
             "label": "Transcription, Poem"
           }
