--- a/_data/ff148/manifest.json
+++ b/_data/ff148/manifest.json
@@ -7,8 +7,15 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/17/",
         "type": "Text",
-        "label": { "en": [ "Video available at JMU Scholarly Commons" ] },
+        "label": { "en": [ "Video available" ] },
         "format": "text/html"
+      }
+    ],
+        "provider": [
+      {
+        "id": "https://commons.lib.jmu.edu",
+        "type": "Agent",
+        "label": { "en": [ "JMU Scholarly Commons" ] }
       }
     ],
     "items": [
