--- a/_data/ff143/manifest.json
+++ b/_data/ff143/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/12/",
         "type": "Text",
-        "label": { "en": [ "Video available at FF143" ] },
+        "label": { "en": [ "Video available" ] },
         "format": "text/html"
       }
     ],
