--- a/_data/ff031/manifest.json
+++ b/_data/ff031/manifest.json
@@ -1,4 +1,4 @@
-{
+a{
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff031/manifest.json",
     "type": "Manifest",
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-1994/4/",
         "type": "Text",
-        "label": { "en": [ "FF031" ] },
+        "label": { "en": [ "Video available" ] },
         "format": "text/html"
       }
     ],
@@ -15,7 +15,7 @@
       {
         "id": "https://commons.lib.jmu.edu/",
         "type": "Agent",
-        "label": { "en": [ "JMU Libraries" ] }
+        "label": { "en": [ "JMU Scholarly Commons" ] }
       }
     ],
     "items": [
