--- a/_data/ff136/manifest.json
+++ b/_data/ff136/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/6/",
         "type": "Text",
-        "label": { "en": [ "FF136" ] },
+        "label": { "en": [ "Video available" ] },
         "format": "text/html"
       }
     ],
@@ -15,7 +15,7 @@
       {
         "id": "https://commons.lib.jmu.edu/",
         "type": "Agent",
-        "label": { "en": [ "JMU Libraries" ] }
+        "label": { "en": [ "JMU Scholarly Commons" ] }
       }
     ],
     "items": [
