--- a/_data/ff019/manifest.json
+++ b/_data/ff019/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff019/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "FF019" ] },
+    "label": { "en": [ "Rita Dove Interview, 9/24/2004 (FF019)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/1/",
