--- a/_data/ff136/manifest.json
+++ b/_data/ff136/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff136/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "FF136" ] },
+    "label": { "en": [ "Houston Baker Interview, 9/23/2004 (FF136)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/6/",
