--- a/_data/ff137/manifest.json
+++ b/_data/ff137/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff137/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "FF137" ] },
+    "label": { "en": [ "Sharan Strange Interview, 9/25/2004 (FF137)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/7/",
