--- a/_data/ff139/manifest.json
+++ b/_data/ff139/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff139/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "FF139" ] },
+    "label": { "en": [ "Marilyn Nelson Interview, 9/24/2004 (FF139)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/9/",
