--- a/_data/ff152/manifest.json
+++ b/_data/ff152/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff152/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "FF152" ] },
+    "label": { "en": [ "Elizabeth Alexander Interview, 9/23/2004 (FF152)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/21/",
