--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 ---
-- pages/ff010.md
-- pages/ff019.md
-- pages/ff031.md
+pages/ff010.md
+pages/ff019.md
+pages/ff031.md
 - pages/ff136.md
 - pages/ff137.md
 - pages/ff139.md
