--- a/_data/ff149/manifest.json
+++ b/_data/ff149/manifest.json
@@ -30,6 +30,12 @@
             "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff149/canvas-1/canvas/environment.json",
             "label": "Environment"
           }
+          ,
+          {
+            "type": "AnnotationPage",
+            "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff149/canvas-1/canvas/transcription.json",
+            "label": "Transcription"
+          }
         ],
         "items": [
           {
