--- a/_data/ff153/manifest.json
+++ b/_data/ff153/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/22/",
         "type": "Text",
-        "label": { "en": [ "Joanne V. Gabbin Interview, 9/24/2004 (FF153)" ] },
+        "label": { "en": [ "Video available" ] },
         "format": "text/html"
       }
     ],
