--- a/_data/ff143/manifest.json
+++ b/_data/ff143/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/12/",
         "type": "Text",
-        "label": { "en": [ "Video available" ] },
+        "label": { "en": [ "Sonia Sanchez Interview, 9/25/2004 (FF143)" ] },
         "format": "text/html"
       }
     ],
@@ -41,12 +41,6 @@
             "type": "AnnotationPage",
             "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff143/canvas-1/canvas/speaker.json",
             "label": "Speaker"
-          }
-          ,
-          {
-            "type": "AnnotationPage",
-            "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff143/canvas-1/canvas/transcription--poem.json",
-            "label": "Transcription, Poem"
           }
         ],
         "items": [
