--- a/_data/ff031/manifest.json
+++ b/_data/ff031/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-1994/4/",
         "type": "Text",
-        "label": { "en": [ "Video available" ] },
+        "label": { "en": [ "African American Poetry and the Vernacular Matrix Part 3, 9/29/1994 (FF031)" ] },
         "format": "text/html"
       }
     ],
@@ -29,12 +29,6 @@
             "type": "AnnotationPage",
             "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff031/canvas-1/canvas/environment.json",
             "label": "Environment"
-          }
-          ,
-          {
-            "type": "AnnotationPage",
-            "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff031/canvas-1/canvas/transcription.json",
-            "label": "Transcription"
           }
           ,
           {
