--- a/_data/ff010/manifest.json
+++ b/_data/ff010/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-events/9/",
         "type": "Text",
-        "label": { "en": [ "Video available" ] },
+        "label": { "en": [ "Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)" ] },
         "format": "text/html"
       }
     ],
@@ -29,12 +29,6 @@
             "type": "AnnotationPage",
             "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff010/canvas-1/canvas/environment.json",
             "label": "Environment"
-          }
-          ,
-          {
-            "type": "AnnotationPage",
-            "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff010/canvas-1/canvas/transcription.json",
-            "label": "Transcription"
           }
           ,
           {
