--- a/_data/ff152/manifest.json
+++ b/_data/ff152/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/21/",
         "type": "Text",
-        "label": { "en": [ "Elizabeth Alexander Interview, 9/23/2004 (FF152)" ] },
+        "label": { "en": [ "Elizabeth Alexander Interview Video, 9/23/2004 (FF152)" ] },
         "format": "text/html"
       }
     ],
