--- a/_data/ff153/manifest.json
+++ b/_data/ff153/manifest.json
@@ -2,7 +2,7 @@
     "@context": "http://iiif.io/api/presentation/3/context.json",
     "id": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff153/manifest.json",
     "type": "Manifest",
-    "label": { "en": [ "Joanne V. Gabbin Interview, 9/24/2004 (FF153)" ] },
+    "label": { "en": [ "Joanne V. Gabbin Interview Video, 9/24/2004 (FF153)" ] },
     "homepage": [
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/22/",
