--- a/_data/ff149/manifest.json
+++ b/_data/ff149/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/18/",
         "type": "Text",
-        "label": { "en": [ "Askia M. Touré Interview, 9/24/2004 (FF149)" ] },
+        "label": { "en": [ "Askia M. Touré Interview Video, 9/24/2004 (FF149)" ] },
         "format": "text/html"
       }
     ],
