--- a/_data/ff146/manifest.json
+++ b/_data/ff146/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/15/",
         "type": "Text",
-        "label": { "en": [ "Kwame Dawes Interview, 9/25/2004 (FF146)" ] },
+        "label": { "en": [ "Kwame Dawes Interview Video, 9/25/2004 (FF146)" ] },
         "format": "text/html"
       }
     ],
