--- a/_data/ff145/manifest.json
+++ b/_data/ff145/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/14/",
         "type": "Text",
-        "label": { "en": [ "Major Jackson Interview, 9/23/2004 (FF145)" ] },
+        "label": { "en": [ "Major Jackson Interview Video, 9/23/2004 (FF145)" ] },
         "format": "text/html"
       }
     ],
