--- a/_data/ff143/manifest.json
+++ b/_data/ff143/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/12/",
         "type": "Text",
-        "label": { "en": [ "Sonia Sanchez Interview, 9/25/2004 (FF143)" ] },
+        "label": { "en": [ "Sonia Sanchez Interview Video, 9/25/2004 (FF143)" ] },
         "format": "text/html"
       }
     ],
