--- a/_data/ff142/manifest.json
+++ b/_data/ff142/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/11/",
         "type": "Text",
-        "label": { "en": [ "Yusef Komunyakaa Interview, 9/24/2004 (FF142)" ] },
+        "label": { "en": [ "Yusef Komunyakaa Interview Video, 9/24/2004 (FF142)" ] },
         "format": "text/html"
       }
     ],
