--- a/_data/ff140/manifest.json
+++ b/_data/ff140/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/10/",
         "type": "Text",
-        "label": { "en": [ "Velma Pollard Interview, 9/23/2004 (FF140)" ] },
+        "label": { "en": [ "Velma Pollard Interview Video, 9/23/2004 (FF140)" ] },
         "format": "text/html"
       }
     ],
