--- a/_data/ff139/manifest.json
+++ b/_data/ff139/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/9/",
         "type": "Text",
-        "label": { "en": [ "Marilyn Nelson Interview, 9/24/2004 (FF139)" ] },
+        "label": { "en": [ "Marilyn Nelson Interview Video, 9/24/2004 (FF139)" ] },
         "format": "text/html"
       }
     ],
