--- a/_data/ff137/manifest.json
+++ b/_data/ff137/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/7/",
         "type": "Text",
-        "label": { "en": [ "Sharan Strange Interview, 9/25/2004 (FF137)" ] },
+        "label": { "en": [ "Sharan Strange Interview Video, 9/25/2004 (FF137)" ] },
         "format": "text/html"
       }
     ],
