--- a/_data/ff136/manifest.json
+++ b/_data/ff136/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/6/",
         "type": "Text",
-        "label": { "en": [ "Houston Baker Interview, 9/23/2004 (FF136)" ] },
+        "label": { "en": [ "Houston Baker Interview Video, 9/23/2004 (FF136)" ] },
         "format": "text/html"
       }
     ],
