--- a/_data/ff019/manifest.json
+++ b/_data/ff019/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-2004/1/",
         "type": "Text",
-        "label": { "en": [ "Rita Dove Interview, 9/24/2004 (FF019)" ] },
+        "label": { "en": [ "Rita Dove Interview Video, 9/24/2004 (FF019)" ] },
         "format": "text/html"
       }
     ],
