--- a/_data/ff010/manifest.json
+++ b/_data/ff010/manifest.json
@@ -7,7 +7,7 @@
       {
         "id": "https://commons.lib.jmu.edu/ffpc-events/9/",
         "type": "Text",
-        "label": { "en": [ "Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)" ] },
+        "label": { "en": [ "Furious Flower Poetry Center Overview Part 1 Video, 6/20/2011 (FF010)" ] },
         "format": "text/html"
       }
     ],
