--- a/_data/ff149/manifest.json
+++ b/_data/ff149/manifest.json
@@ -59,9 +59,9 @@
                 "type": "Annotation",
                 "motivation": "painting",
                 "body": {
-                  "id": "https://apps.lib.jmu.edu/audiannotate/FF149.mp4",
-                  "type": "Video",
-                  "format": "video/mp4",
+                  "id": "https://apps.lib.jmu.edu/audiannotate/FF149.mp3",
+                  "type": "Sound",
+                  "format": "audio/mp3",
                     "duration": 1750
                 },
                 "target": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff149/canvas-1/canvas"
