--- a/_data/ff148/manifest.json
+++ b/_data/ff148/manifest.json
@@ -59,9 +59,9 @@
                 "type": "Annotation",
                 "motivation": "painting",
                 "body": {
-                  "id": "https://apps.lib.jmu.edu/audiannotate/FF146.mp3",
+                  "id": "https://apps.lib.jmu.edu/audiannotate/FF146.wav",
                   "type": "Sound",
-                  "format": "audio/mp3",
+                  "format": "audio/wav",
                     "duration": 2377
                 },
                 "target": "https://JMU-AudiAnnotate.github.io/FFPC-Video-Transcriptions/ff148/canvas-1/canvas"
