--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,3 +14,4 @@
 - pages/ff152.md
 - pages/ff153.md
 - pages/ff031.md
+- pages/ff031_african-american-poetry-and-the-vernacular-matrix-part-3-9-29-1994.md
