--- a/_data/ff010/manifest.json
+++ b/_data/ff010/manifest.json
@@ -67,6 +67,18 @@
 			]
 		}
 	},
+	    	{
+		"label": {
+			"en": [
+				"Contributor"
+			]
+		},
+		"value": {
+			"en": [
+				"Sonia Sanchez (speaker)"
+			]
+		}
+	},
 	{
 		"label": {
 			"en": [
